--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
 			"type": "java",
 			"name": "Main",
 			"request": "launch",
+			"mainClass": "exercicio6.Main",
+			"projectName": "Faculdade_7817431a"
+		},
+		{
+			"type": "java",
+			"name": "Main",
+			"request": "launch",
 			"mainClass": "exercicio4.Main",
 			"projectName": "Faculdade_7817431a"
 		},
