--- a/.vscode/launch-THALISON.json
+++ b/.vscode/launch-THALISON.json
@@ -3,16 +3,16 @@
 	"configurations": [
 		{
 			"type": "java",
-			"name": "Matriz",
+			"name": "VetorDeObjetosCP",
 			"request": "launch",
-			"mainClass": "Matriz",
+			"mainClass": "VetorDeObjetosCP",
 			"projectName": "Faculdade_2d8140d4"
 		},
 		{
 			"type": "java",
-			"name": "VetorIterador",
+			"name": "VetorDeObjetos",
 			"request": "launch",
-			"mainClass": "VetorIterador",
+			"mainClass": "VetorDeObjetos",
 			"projectName": "Faculdade_2d8140d4"
 		},
 		{
