--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "totvsLanguageServer.welcomePage": false
+    "totvsLanguageServer.welcomePage": false,
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "3 Período/1 Bimestre/Estrutura de Dados II/projeto02/bin/gson-2.13.0.jar",
+        "3 Período/1 Bimestre/Estrutura de Dados II/projeto02/lib/gson-2.13.0.jar"
+    ]
 }
