--- a/3 Período/2 Bimestre/Estrutura de Dados II/tabelaHash/.vscode/settings.json
+++ b/3 Período/2 Bimestre/Estrutura de Dados II/tabelaHash/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "c:\\Users\\Thalison Santos\\Downloads\\caelum-stella-bean-validation-2.1.2.jar"
     ]
 }
