--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Oracle_JDK-23
 Certificados
 atividade3103.zip
 4 Periodo/Desenovolvimento Sistemas Web I/1-Bim/Projeto-Gestao-Estoques
+4 Periodo/Desenvolvimento Sistemas Web I/1-Bim/Projeto-Gestao-Estoques
