--- a/4 Periodo/Desenvolvimento Sistemas Web I/2-bim/projeto01 back/.env
+++ b/4 Periodo/Desenvolvimento Sistemas Web I/2-bim/projeto01 back/.env
@@ -1,2 +1,2 @@
-APP_NAME = "API Controle de Treinamentos"
+APP_NAME = "Gente Control- Gestão de Pessoas e Treinamentos"
 DATABASE_URL = "sqlite:///./banco_de_dados.db" 
