--- a/.gitignore
+++ b/.gitignore
@@ -2419,3 +2419,4 @@ atividade3103.zip
 .tmp.driveupload/29405
 .tmp.driveupload/29411
 .tmp.driveupload/29415
+4 Periodo/Desenvolvimento Sistemas Web I/1-Bim/Projeto-Gestao-Estoques
