--- a/.gitignore
+++ b/.gitignore
@@ -2421,3 +2421,4 @@ atividade3103.zip
 .tmp.driveupload/29415
 4 Periodo/Desenvolvimento Sistemas Web I/1-Bim/Projeto-Gestao-Estoques
 4 Periodo/Desenvolvimento Sistemas Web I/1-Bim/.Projeto-Gestao-Estoques
+4 Periodo/Desenvolvimento Sistemas Web I/1-Bim/.Projeto-Gestao-Estoques
