--- a/.gitignore
+++ b/.gitignore
@@ -2422,3 +2422,4 @@ atividade3103.zip
 4 Periodo/Desenvolvimento Sistemas Web I/1-Bim/Projeto-Gestao-Estoques
 4 Periodo/Desenvolvimento Sistemas Web I/1-Bim/.Projeto-Gestao-Estoques
 4 Periodo/Desenvolvimento Sistemas Web I/1-Bim/.Projeto-Gestao-Estoques
+/4 Periodo/Desenvolvimento Sistemas Web I/1-Bim
